--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ dotenvy = "0.15.7"
 sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "chrono" ] }
 tower-http = { version = "0.5.0", features = ["auth", "trace"] }
 anyhow = "1.0.79"
+askama = "0.12.1"
 
